@@ -6,9 +6,11 @@ grails.project.test.reports.dir = "target/test-reports"
 grails.project.work.dir = "target/work"
 grails.project.target.level = 1.6
 grails.project.source.level = 1.6
-//grails.project.war.file = "target/${appName}-${appVersion}.war"
-//grails.tomcat.nio=true
+grails.project.war.file = "target/${appName}-${appVersion}.war"
+grails.tomcat.nio=true
+grails.tomcat.jvmArgs = ["-Xms2048m", "-Xmx4096m", "-XX:PermSize=1024m", "-XX:MaxPermSize=2048m", "-XX:+CMSClassUnloadingEnabled", "-XX:+UseConcMarkSweepGC"]
 
+/*
 grails.project.fork = [
     // configure settings for compilation JVM, note that if you alter the Groovy version forked compilation is required
     //  compile: [maxMemory: 256, minMemory: 64, debug: false, maxPerm: 256, daemon:true],
@@ -22,6 +24,7 @@ grails.project.fork = [
     // configure settings for the Console UI JVM
     console: [maxMemory: 2048, minMemory: 512, debug: false, maxPerm: 1024]
 ]
+*/
 
 grails.project.dependency.resolver = "maven" // or ivy
 grails.project.dependency.resolution = {
@@ -57,18 +60,18 @@ grails.project.dependency.resolution = {
 
     plugins {
         // plugins for the build system only
-        build ":tomcat:7.0.52.1"
+        build ':tomcat:latest.release'
 
         // plugins for the compile step
-        compile ":scaffolding:2.0.1"
-        compile ':cache:1.1.1'
+        //compile ":scaffolding:2.0.1"
+        compile ':cache:latest.release'
 
 
         // plugins needed at runtime but not for compilation
         compile ":hibernate:3.6.10.7"
         runtime ":database-migration:1.3.8"
         runtime ":jquery:1.10.2.2"
-        runtime ":resources:1.2.1"
+        //runtime ":resources:1.2.1"
 
         // Uncomment these (or add new ones) to enable additional resources capabilities
         //runtime ":zipped-resources:1.0.1"
